[gd_scene load_steps=2 format=3 uid="uid://dbk1ybfwje8cs"]

[ext_resource type="Script" uid="uid://bx0houomcg4iq" path="res://prefabs/tools/story_requirements_editor/story_requirements_editor.gd" id="1_2vuci"]

[node name="StoryRequirementsEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2vuci")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Act" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MinActControl" type="Control" parent="TabContainer/Act"]
anchors_preset = 0
offset_right = 264.0
offset_bottom = 40.0

[node name="ControlLabel" type="RichTextLabel" parent="TabContainer/Act/MinActControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 116.0
offset_bottom = 11.0
grow_vertical = 2
text = "Min Act:"

[node name="MinAct" type="SpinBox" parent="TabContainer/Act/MinActControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -81.27083
offset_top = -14.5
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
max_value = 5.0
rounded = true

[node name="MaxActControl" type="Control" parent="TabContainer/Act"]
anchors_preset = 0
offset_top = 43.0
offset_right = 264.0
offset_bottom = 83.0

[node name="ControlLabel" type="RichTextLabel" parent="TabContainer/Act/MaxActControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 116.0
offset_bottom = 11.0
grow_vertical = 2
text = "Min Act:"

[node name="MaxAct" type="SpinBox" parent="TabContainer/Act/MaxActControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -81.27083
offset_top = -14.5
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
min_value = -1.0
max_value = 5.0
value = -1.0
rounded = true

[node name="Stats" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Quests" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Cutscenes" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Dialogues" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="Static Encounters" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="Puzzles" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 6

[node name="Puzzle States" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 7

[node name="Evolutions" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 8

[node name="Followers" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 9

[node name="Items" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 10
